--- a/boards.css
+++ b/boards.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Verdana, sans-serif;
+	font-family: Helvetica, sans-serif;
 }
 
 h1 {
@@ -26,27 +26,31 @@ li {
 	font-size: 20px;
 	font-weight: bold;
 	color: white;
+	border-radius: 2px;
 }
 
 li:hover {
 	background-color: #6495ED;
+	cursor: pointer;
 }
 
 button {
 	text-align: center;
 	width: 150px;
-	background-color: #ccc;
+	background-color: #d8d8d8;
 	height: 150px;
 	display: inline-block;
-	margin: 10px 5px 5px 5px;
+	margin: 10px 5px;
 	vertical-align: top;
 	border: 0;
+	border-radius: 2px;
 }
 
 button:hover {
 	background-color: #bbb;
+	cursor: pointer;
 }
 
 img {
-	height: 80%;
+	height: 70%;
 }
