final touches for now. PS the only reason I am finishing this late is because I got incredibly sick yesterday and spent literally all day today sleeping (woohoo).

--- a/reg_login.css
+++ b/reg_login.css
@@ -57,6 +57,10 @@ button[type=submit]:hover {
 	cursor: pointer;
 }
 
+form {
+	border-radius: 4px;
+}
+
 .form_container {
 	margin: 0px;
 }
@@ -64,7 +68,6 @@ button[type=submit]:hover {
 .main {
 	margin: auto;
 	width: 450px;
-	border-radius: 4px;
 	margin-bottom: 100px;
 }
 
