--- a/views/reg_login.ejs
+++ b/views/reg_login.ejs
@@ -12,7 +12,7 @@
 				<input type="password" placeholder="enter password" id="reg_password" required>
 				<label><p>confirm password</p></label>
 				<input type="password" placeholder="re-enter password" id="reg_confirm" required>
-				<button type="submit">submit</button>
+				<button type="submit" id="register_submit">submit</button>
 			</div>
 		</form>
 	</div>
@@ -28,7 +28,8 @@
 				<input type="email" placeholder="enter email" id="login_email" required>
 				<label><p>password</p></label>
 				<input type="password" placeholder="enter password" id="login_password" required>
-				<button type="submit">login</button>
+				<p class="error_msg"></p>
+				<button type="submit" id="login_submit">login</button>
 				<input type="checkbox" checked>remember me
 			</div>
 		</form>
