--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,7 +22,7 @@
 
 		<div id="side_menu">
 			<a href="#" class="close_button">&times;</a>
-			<a href="#">Option</a>
+			<a href="#" id="logout_button">Logout</a>
 		  	<a href="#">Option 2</a>
 		  	<a href="#">Option 3</a>
 		  	<a href="#">Option 4</a>
