--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<title><%= title %></title>
 		<link rel="stylesheet" href=<%= stylesheet %>>
-		<link rel="stylesheet" href="stylesheets/header.css">
+		<link rel="stylesheet" href="/stylesheets/header.css">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-		<script src="javascripts/header.js"></script>
+		<script src="/javascripts/header.js"></script>
 		<script src=<%= javascript %>></script>
 	</head>
 	<body>
