--- a/views/reg_login.ejs
+++ b/views/reg_login.ejs
@@ -1,34 +1,38 @@
+<!DOCTYPE html>
+<html>
 <%- include header.ejs %>
 	<div id="register" class="main">
-		<form action="" method="post" id="register_form">
+		<form action="/users/register" method="post" id="register_form">
 			<div class="toggle_container">
 				<button class="login inactive">login</button>
 				<button class="register">register</button>
 			</div>
 			<div class="form_container">
 				<label><p>email</p></label>
-				<input type="email" placeholder="enter email" id="reg_email" required>
+				<input type="email" name="email" placeholder="enter email" id="reg_email" required>
+				<p class="error_msg" id="email_error"><%= register_error %></p>
 				<label><p>password</p></label>
-				<input type="password" placeholder="enter password" id="reg_password" required>
+				<input type="password" name="password" placeholder="enter password" id="reg_password" required>
 				<label><p>confirm password</p></label>
 				<input type="password" placeholder="re-enter password" id="reg_confirm" required>
+				<p class="error_msg" id="register_error"></p>
 				<button type="submit" id="register_submit">submit</button>
 			</div>
 		</form>
 	</div>
 
 	<div id="login" class="main">
-		<form action="" method="post" id="login_form">
+		<form action="/users/login" method="post" id="login_form">
 			<div class="toggle_container">
 				<button class="login">login</button>
 				<button class="register inactive">register</button>
 			</div>
 			<div class="form_container">
 				<label><p>email</p></label>
-				<input type="email" placeholder="enter email" id="login_email" required>
+				<input type="email" name="email" placeholder="enter email" id="login_email" required>
 				<label><p>password</p></label>
-				<input type="password" placeholder="enter password" id="login_password" required>
-				<p class="error_msg"></p>
+				<input type="password" name="password" placeholder="enter password" id="login_password" required>
+				<p class="error_msg" id="login_error"><%= login_error %></p>
 				<button type="submit" id="login_submit">login</button>
 				<input type="checkbox" checked>remember me
 			</div>
