--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="username" content='<%= locals.user.email %>'>
+		<meta name="username" content='<%= email %>'>
 		<title><%= title %></title>
 		<link rel="stylesheet" href=<%= stylesheet %>>
 		<link rel="stylesheet" href="/stylesheets/header.css">
