--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 			</ul>
 			<p class="subtitle">Description</p>
 			<a href="#" class="edit_button" id="description_edit_btn">Edit</a>
-			<p id="text_description">This is the description. It is very informative. It tells you everything there is to konw about whatever it is that this card is about (see card title above). Wow. So useful.</p>
+			<p id="text_description" class="card_text">This is the description. It is very informative. It tells you everything there is to konw about whatever it is that this card is about (see card title above). Wow. So useful.</p>
 			<div id="editable_description">
 				<textarea placeholder="Write a description..." id="edit_description_text"></textarea>
 				<button id="description_save" class="save_button">Save</button>
