--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,10 +23,7 @@
 
 		<div id="side_menu">
 			<a href="#" class="close_button">&times;</a>
-			<a href="#" id="logout_button">Logout</a>
-		  	<a href="#">Option 2</a>
-		  	<a href="#">Option 3</a>
-		  	<a href="#">Option 4</a>
+			<a href="/logout" id="logout_button">Logout</a>
 		</div>
 
 		<div id="drop_down">
@@ -40,5 +37,3 @@
 				<li>Board Name</li>
 			</ul>
 		</div>
-	</body>
-</html>
