--- a/views/board.ejs
+++ b/views/board.ejs
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
-
 <%- include header.ejs %>
-	<h2>Board Name</h2>
+	<h2><%= title %></h2>
 	<div id="lol_container">
 		<ul id="lol">
 			<li id="add_category_li">
