--- a/public/stylesheets/boards.css
+++ b/public/stylesheets/boards.css
@@ -25,7 +25,7 @@ h2 {
 	border-radius: 10px;
 }
 
-.board_btn a {
+.board_title {
 	font-size: 20px;
 	font-weight: bold;
 	color: white;
@@ -39,27 +39,92 @@ h2 {
 	cursor: pointer;
 }
 
-#add_btn {
+.add_btn {
 	text-align: center;
-	width: 150px;
-	background-color: #aaa;
-	height: 150px;
+	width: 110px;
+	background-color: #bbb;
+	height: 110px;
 	display: inline-block;
 	margin: 10px 5px;
 	vertical-align: top;
 	border: 0;
 	border-radius: 10px;
+	padding: 20px;
+	transition: width .2s;
 }
 
-#add_btn:hover {
-	background-color: #777;
+.hover:hover {
+	background-color: #888;
 	cursor: pointer;
 }
 
-#add_btn a {
+#add_btn > a {
 	font-size: 120px;
 	text-decoration: none;
 	color: white;
 	position: relative;
-	top: -10px;
+	top: -25px;
 }
+
+#board_name {
+	font-size: 20px;
+    width: 260px;
+    display: block;
+    margin: 0;
+    border: 0;
+    color: white;
+    background-color: #bbb;
+    /*padding: 5px 10px;*/
+    font-weight: bold;
+    border-radius: 10px;
+    outline: none;
+}
+
+#add_board_button {
+	float: left;
+    width: 70px;
+    border: 0;
+    border-radius: 3px;
+    font-size: 20px;
+    padding: 4px;
+    position: relative;
+    top:55px;
+    background-color: #3D59AB;
+    color: white;
+}
+
+#add_board_button:hover {
+	cursor: pointer;
+	background-color: #6495ED;
+}
+
+#cancel_button {
+	color: #333;
+    font-size: 16px;
+    float: right;
+    position: relative;
+    top:65px;
+    text-decoration: underline;
+    font-weight: lighter;
+}
+
+#cancel_button:hover {
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.delete_btn {
+	font-size: 13px;
+    text-decoration: none;
+    font-weight: lighter;
+    color: white;
+    float: right;
+    position: relative;
+    top: -14px;
+    right: -10px;
+}
+
+.delete_btn:hover {
+	color: #6495ED;
+}
+
