--- a/views/reg_login.ejs
+++ b/views/reg_login.ejs
@@ -1,5 +1,5 @@
 <%- include header.ejs %>
-	<div id="register" class="main">
+	<div id="register" class="main" style="display:none;">
 		<form action="/users/register" method="post" id="register_form">
 			<div class="toggle_container">
 				<button class="login inactive">login</button>
