--- a/views/board.ejs
+++ b/views/board.ejs
@@ -6,7 +6,7 @@
 				<a class="add_content">Add new category...</a>
 				<div class="new_content" style="display: none;">
 					<input type="text" id="category_title_input" class="title_input" placeholder="Enter Category Name">
-					<button id="category_add_button" class="add_category_button">Add</button>
+					<button id="category_add_button" class="add_category_button add_button">Add</button>
 					<a id="category_cancel_button" class="cancel_new_button">Cancel</a>
 				</div>
 			</li>
