--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,7 +28,7 @@
 		<% if(showOptions) { %>
 			<div id="side_menu">
 				<a class="close_button">&times;</a>
-				<a href="/logout" id="logout_button">Logout</a>
+				<a href="/logout" id="logout_button" class="option">Logout</a>
 			</div>
 		<% } %>
 
